welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: Unmatched closing brace '}' ignored here
	}else if (a<0 && b<0) }
                              ^posNeg:10: error: Unmatched closing brace '}' ignored here
 }
 ^